Create new project1

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Đây là trang gioi thieu</h1>
+    <h1>Đây là trang gioi thieu 1</h1>
     <p>
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint quaerat
       iusto, dolorum quasi eligendi aperiam laudantium illum ipsum nemo
