--- a/product-list.html
+++ b/product-list.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Đây là trang lien he 1</h1>
+    <h1>Đây là trang san pham</h1>
   </body>
 </html>
