--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Đây là trang chủ</h1>
+    <h1>Đây là trang chủ 1</h1>
   </body>
 </html>
