--- a/product-list.html
+++ b/product-list.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Đây là trang san pham</h1>
+    <h1>Đây là trang san pham12</h1>
     <p>Danh sách sản phẩm 10</p>
   </body>
 </html>
