--- a/login.html
+++ b/login.html
@@ -7,5 +7,7 @@
   </head>
   <body>
     <h1>Đây là trang đăng nhập</h1>
+    <div>đăng nhập bằng google</div>
+    <div>đăng nhập bằng facebook</div>
   </body>
 </html>
