--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
   </head>
   <body>
     <h1>Đây là trang chủ 1</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa similique
+      necessitatibus libero aliquid laboriosam, quos, id minus incidunt harum
+      illo, vero voluptas eaque magnam! Numquam molestiae doloremque explicabo
+      architecto tempore?
+    </p>
   </body>
 </html>
